@@ -1,20 +1,0 @@
-<?php
-/**
- * @version		$Id$
- * @copyright	Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
- * @license		GNU General Public License version 2 or later; see LICENSE.txt
- */
- 
-defined('_JEXEC') or die;
-
-/**
- * Utility class for creating HTML Grids
- *
- * @static
- * @package		Joomla.Administrator
- * @subpackage	com_weblinks
- * @since		1.6
- */
-class JHtmlWeblink
-{
-}
