@@ -28,7 +28,8 @@ $ -> Language fix or change
 ! -> Note
 
 18-Jun-2011 Jean-Marie Simonet
- [#26179] Joomla 1.7.0 find updates and proposes 1.6.3. Thanks Christophe
+# [#26179] Joomla 1.7.0 find updates and proposes 1.6.3. Thanks Christophe
+- [#26103] Empty file administrator/components/com_weblinks/helpers/html/weblink.php. Thanks Mark.
 
 17-Jun-2011 Mark Dexter
  # [#26124] Namespace the checkAll() function
